Version 2 of the app: modularized, moved items into a config file. Missing tests for the new structure